<resources>
    <string name="app_name">WhaleComp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">"Hello blank fragment"</string>
    <string name="notification_channel_id">whalecomp_nc</string>
    <string name="msg_token_fmt" translatable="false">Registration Token: %s</string>
    <string name="eps_text">"EPS是以太坊上大名鼎鼎的Curve項目在Binance Smart Chain上的官方分叉版本，提供穩定幣之間低滑點的交易服務。流動性提供方可獲得交易手續費分成與LP代幣的2池質押獎勵。用戶使用本策略以美金穩定幣作爲本金投入3Pool池賺取交易費與EPS獎勵，進一步利用EPS的鎖倉獎勵機制增大基礎收益，最後使用我們提供的複利優化工具大幅放大收益。\n \n特別提示：使用本策略后，儘管您的本金可以隨時撤出，但收益將以EPS代幣的形式鎖定至少3個月。同時由於使用滾動機制，收益將持續鎖倉。在鎖倉期間，EPS價格將對您的縂收益價值產生重大影響。"</string>
    <string name="doc_text">"以下策略設計目標是以所對應的公鏈穩定行、 項目安全性及用戶規模與粘度作爲遴選標準，追求收益最大化。儘管我們在策略設計堅持審慎原則，並通過大量前期测试，但我們并不保證您的投資收益。 \n\n特別提示：我們並不托管您的資金，您的資金流轉僅發生在您的個人錢包與被投項目的智能合約之間，且您需要對每筆交易單獨簽名確認。"</string>
    <string name="desc_text">"您可免費使用本策略及複利滾動工具，獲得投資收益。盡管如此，您的最終資產價值將取決于您投資規模，EPS市場價格水平，項目鎖倉收益率等要素，以及您使用複利滾動工具的時間點與頻率。因此，我們不對您的最終投資收益做出任何形式的承諾或保證，請自行評估后使用。 \n\n特別提示：我們不托管您的資金，您的資金流轉僅發生在您的個人錢包與被投項目的智能合約之間，且您需要對每筆交易單獨簽名確認。啓用複利滾動工具后，請避免通過Ellipsis網站進行滾動操作，否則將影響複利滾動工具的準確性，可能導致無法正常使用。"</string>
    <string name="bunny_text">"PancakeBunny是專爲Binance Smart Chain上鎖倉規模最大的PANCAKE項目打造的一款收益優化工具。Ellipse Finance是以太坊上大名鼎鼎的Curve項目在BSC上的官方分叉版本，提供穩定幣之間低滑點的交易服務。流動性提供方可獲得交易手續費分成與LP代幣的2池質押獎勵。用戶使用本策略以美金穩定幣作爲本金投入PancakeBunny USDT-BUSD LP池賺取流動性挖礦獎勵與交易費獎勵，並置換為EPS，進一步利用EPS的鎖倉獎勵機制增大基礎收益，最後使用我們提供的複利優化工具大幅放大收益。 \n\n 特別提示：使用本策略后，儘管您的本金可以隨時撤出，但收益將以EPS代幣的形式鎖定至少3個月。同時由於使用滾動機制，收益將持續鎖倉。在鎖倉期間，EPS價格將對您的縂收益價值產生重大影響。"</string>
    <string name="vault_string">"WhaleTrust錢包允許您以完全匿名和免費的方式使用，且您的私鑰與助記詞永遠不會離開您的設備。\n\n請妥善備份您的私鑰與助記詞。如丟失，我們將無法爲您找回。請確保除您本人以外任何人都無法獲得您的私鑰與助記詞的訪問權。"</string>
    <string name="invalid_private_key">Invalid private key</string>
    <string name="eps_claim_stake_text">提取已解鎖的EPS將全額轉入您的錢包地址。請及時兌換為其他代幣或轉至其他錢包地址。由於複利滾動功能可能仍處於開啓狀態，您當前錢包内EPS餘額可能在下次滾動操作時重新鎖倉。是否繼續？</string>
    <string name="eps_exit_strategy">退出當前策略后，複利滾動功能將被關閉；您當前已解鎖的EPS將全額轉入您的錢包地址；您後續須自行手動提取未解鎖EPS。是否退出？</string>
    <string name="eps_stop_compunding">關閉複利滾動功能對您的預期收益產生重大影響。是否關閉？</string>
    <string name="search_token">搜索...</string>
    <string name="active_token">顯示</string>
    <string name="inactive_token">隱藏</string>
    <string name="alert_heading">新建價格提醒</string>
    <string name="pick_alert_token">選擇幣種</string>
    <string name="alert_type">提醒類型</string>
    <string name="alert_type_price_equal">價格等於</string>
    <string name="alert_type_price_higher">漲幅達到</string>
    <string name="alert_type_price_lower">跌幅達到</string>
    <string name="alert_value">數值</string>
    <string name="alert_frequency">提醒頻率</string>
    <string name="alert_frequency_once">僅提醒一次</string>
    <string name="alert_frequency_once_daily">每日提醒一次</string>
    <string name="alert_frequency_always">持續提醒</string>
    <string name="create_remainder">創建提醒</string>
    <string name="current_expected_annual_return">當前預期年化收益</string>
    <string name="use_optimized_stratergy">使用優化策略</string>
    <string name="no_optimized_stratergy">未使用優化策略</string>
    <string name="annual_income">年化收益</string>
    <string name="open_optimized_stratergy">開啓優化策略</string>
    <string name="current_total_net_worth">當前縂净值</string>
    <string name="optimize_time_remaining">優化時間剩餘</string>
    <string name="optimize_count">優化次數</string>
    <string name="start_optimize">獲得更高優化收益</string>
    <string name="exit_strategy">退出本策略</string>
    <string name="language">語言</string>
    <string name="traditional_chinese">中文繁體</string>
    <string name="simplified_chinese">中文简体</string>
    <string name="english">English</string>
    <string name="change_smartchain">通知設置</string>
    <string name="new_account">新建賬戶</string>
    <string name="accept_terms">我完全瞭解如丟失私鑰或助記詞，我將無法訪問我的錢包。</string>
    <string name="show_mnemonic">顯示助記詞</string>
    <string name="current_password">輸入當前密碼</string>
    <string name="set_new_password">設置新密碼</string>
    <string name="confirm_new_password">再次確認新密碼</string>
    <string name="set_password">設置密碼</string>
    <string name="confirm_password_again">再次確認密碼</string>
</resources>