<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment.MnemonicDescActivity">
    <com.github.sshadkany.shapes.CircleView
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_circle_radius="4dp"
        app:shape_circle_shadow_position_y="4dp"
        app:shape_circle_shadow_position_x="4dp"
        app:shape_circle_dark_color="@color/dark_shadow"
        app:shape_circle_light_color="@color/light_shadow"
        app:shape_circle_borderColor="#ECF0F3"
        app:shape_circle_borderWidth="1dp"
        app:shape_circle_backgroundColor="@color/background_color"
        app:shape_circle_shadow_type="drop_shadow">
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/back_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </com.github.sshadkany.shapes.CircleView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/backButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/vault_design"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vault_string"
                android:layout_marginTop="30dp"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            >
            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/terms_tick"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/accept_terms"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/continueButton"
                android:src="@drawable/blue_square_button"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/show_mnemonic"
                android:textColor="@color/bg_color"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="16dp"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>