<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WhaleTrust.AddRemoveTokenActivity">
    <com.github.sshadkany.shapes.CircleView
        android:id="@+id/backButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_circle_radius="4dp"
        app:shape_circle_shadow_position_y="4dp"
        app:shape_circle_shadow_position_x="4dp"
        app:shape_circle_dark_color="@color/dark_shadow"
        app:shape_circle_light_color="@color/light_shadow"
        app:shape_circle_borderColor="#ECF0F3"
        app:shape_circle_borderWidth="1dp"
        app:shape_circle_backgroundColor="@color/background_color"
        app:shape_circle_shadow_type="drop_shadow">
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/back_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </com.github.sshadkany.shapes.CircleView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/backButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".85">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/search_editbox_addtoken" />
                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:id="@+id/searchTokenText"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:hint="@string/search_token"
                        android:paddingHorizontal="10dp"
                        android:background="@null"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="100dp"/>
                </RelativeLayout>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".15"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/newTokenButton"
                    android:src="@drawable/round_plus"
                    android:adjustViewBounds="true"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_token"
                android:layout_marginHorizontal="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/activeTokenList"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inactive_token"
                android:layout_marginHorizontal="10dp"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/inActiveTokenList"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>