<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment.ChangeLanguageActivity">
    <com.github.sshadkany.shapes.CircleView
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_circle_radius="4dp"
        app:shape_circle_shadow_position_y="4dp"
        app:shape_circle_shadow_position_x="4dp"
        app:shape_circle_dark_color="@color/dark_shadow"
        app:shape_circle_light_color="@color/light_shadow"
        app:shape_circle_borderColor="#ECF0F3"
        app:shape_circle_borderWidth="1dp"
        app:shape_circle_backgroundColor="@color/background_color"
        app:shape_circle_shadow_type="drop_shadow">
        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="center"
            android:src="@drawable/back_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </com.github.sshadkany.shapes.CircleView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/backButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pass_setting_card_lg"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingHorizontal="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".8"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/traditional_chinese"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight=".2"
                        android:layout_height="25dp"
                        android:adjustViewBounds="true"
                        android:id="@+id/chineseSelected"
                        android:src="@drawable/round_selected"/>

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pass_setting_card_lg"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingHorizontal="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".8"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/simplified_chinese"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight=".2"
                        android:layout_height="25dp"
                        android:adjustViewBounds="true"
                        android:id="@+id/tradChineseSelected"
                        android:src="@drawable/round_unselected"/>

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pass_setting_card_lg"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingHorizontal="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight=".8"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/english"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight=".2"
                        android:layout_height="25dp"
                        android:adjustViewBounds="true"
                        android:id="@+id/englishSelected"
                        android:src="@drawable/round_unselected"/>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>