<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical">
    <com.github.sshadkany.shapes.RoundRectView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:shape_roundRect_backgroundColor="@color/background_color"
        app:shape_roundRect_bottomLeftRadius="10dp"
        app:shape_roundRect_bottomRightRadius="10dp"
        app:shape_roundRect_dark_color="@color/dark_shadow"
        app:shape_roundRect_light_color="@color/dark_shadow"
        app:shape_roundRect_radius="6dp"
        app:shape_roundRect_shadow_position_x="8dp"
        app:shape_roundRect_shadow_position_y="8dp"
        app:shape_roundRect_shadow_type="drop_shadow"
        app:shape_roundRect_topLeftRadius="10dp"
        app:shape_roundRect_topRightRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_frequency"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:textSize="@dimen/sub_heading_text"
                    android:layout_weight=".85"/>
                <com.github.sshadkany.CircleButton
                    android:id="@+id/closeButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical|right"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shape_circle_radius="4dp"
                    app:shape_circle_shadow_position_y="4dp"
                    app:shape_circle_shadow_position_x="4dp"
                    app:shape_circle_dark_color="@color/dark_shadow"
                    app:shape_circle_light_color="@color/light_shadow"
                    app:shape_circle_borderColor="#ECF0F3"
                    app:shape_circle_borderWidth="1dp"
                    app:shape_circle_backgroundColor="@color/background_color"
                    app:shape_circle_shadow_type="drop_shadow">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/close_button"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                </com.github.sshadkany.CircleButton>

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                >

                <com.github.sshadkany.RectButton
                    android:id="@+id/onlyOnceButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:shape_roundRect_backgroundColor="@color/background_color"
                    app:shape_roundRect_bottomLeftRadius="15dp"
                    app:shape_roundRect_bottomRightRadius="15dp"
                    app:shape_roundRect_dark_color="@color/dark_shadow"
                    app:shape_roundRect_light_color="@color/light_shadow"
                    app:shape_roundRect_radius="6dp"
                    app:shape_roundRect_shadow_position_x="4dp"
                    app:shape_roundRect_shadow_position_y="4dp"
                    app:shape_roundRect_shadow_type="drop_shadow"
                    app:shape_roundRect_topLeftRadius="15dp"
                    app:shape_roundRect_topRightRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:paddingHorizontal="10dp"
                            android:text="@string/alert_frequency_once"
                            android:textSize="@dimen/normal_text" />
                    </LinearLayout>
                </com.github.sshadkany.RectButton>




            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:visibility="gone"
                >
                <com.github.sshadkany.RectButton
                    android:layout_width="match_parent"
                    android:id="@+id/oncePerDayButton"
                    android:layout_height="match_parent"
                    app:shape_roundRect_radius="6dp"
                    app:shape_roundRect_bottomLeftRadius="15dp"
                    app:shape_roundRect_bottomRightRadius="15dp"
                    app:shape_roundRect_topLeftRadius="15dp"
                    app:shape_roundRect_topRightRadius="15dp"
                    app:shape_roundRect_shadow_position_x="4dp"
                    app:shape_roundRect_shadow_position_y="4dp"
                    app:shape_roundRect_shadow_type="drop_shadow"
                    app:shape_roundRect_backgroundColor="@color/background_color"
                    app:shape_roundRect_light_color="@color/light_shadow"
                    app:shape_roundRect_dark_color="@color/dark_shadow">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="40dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/alert_frequency_once_daily"
                            android:paddingHorizontal="10dp"
                            android:textSize="@dimen/normal_text"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>
                </com.github.sshadkany.RectButton>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="20dp"
                >
                <com.github.sshadkany.RectButton
                    android:layout_width="match_parent"
                    android:id="@+id/alwaysButton"
                    android:layout_height="match_parent"
                    app:shape_roundRect_radius="6dp"
                    app:shape_roundRect_bottomLeftRadius="15dp"
                    app:shape_roundRect_bottomRightRadius="15dp"
                    app:shape_roundRect_topLeftRadius="15dp"
                    app:shape_roundRect_topRightRadius="15dp"
                    app:shape_roundRect_shadow_position_x="4dp"
                    app:shape_roundRect_shadow_position_y="4dp"
                    app:shape_roundRect_shadow_type="drop_shadow"
                    app:shape_roundRect_backgroundColor="@color/background_color"
                    app:shape_roundRect_light_color="@color/light_shadow"
                    app:shape_roundRect_dark_color="@color/dark_shadow">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="40dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/alert_frequency_always"
                            android:paddingHorizontal="10dp"
                            android:textSize="@dimen/normal_text"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>
                </com.github.sshadkany.RectButton>
            </RelativeLayout>


        </LinearLayout>
    </com.github.sshadkany.shapes.RoundRectView>


</LinearLayout>